[package]
name = "rsomics-tpm"
version = "0.1.0"
description = "TPM and FPKM normalization of gene count matrices given gene lengths"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-world"
authors = ["Zane Leong <efd@live.com>"]

[[bin]]
name = "rsomics-tpm"
path = "src/main.rs"

[lib]
name = "rsomics_tpm"
path = "src/lib.rs"

[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }

